Adjusted wording in the token sanity check modal.

--- a/contact-form.html
+++ b/contact-form.html
@@ -370,7 +370,7 @@
                 <div>
                     <p>It appears that the Token required for this contact form is either missing or incorrect.</p>
                     <ul>
-                        <li><strong>Please contact Mark Cox for the correct link to use with this form.</strong></li>
+                        <li><strong>Please contact Mark Cox (<a href="mailto:mark@markcox.uk">mark@markcox.uk</a>) for the correct link to use with this form.</strong></li>
                         <li> </li>
                         <li><strong>Note:</strong> You may close this dialogue to view the form, however submission of the form will not function correctly. Click on the button below to close this window.</li>
                     </ul>
